--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/horo">
+    android:background="@drawable/facts">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
