--- a/app/src/main/res/menu/story.xml
+++ b/app/src/main/res/menu/story.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/Refresh" android:title="Refresh" app:showAsAction="never"/>
+    <item android:id="@+id/Refresh" android:title="Refresh" app:showAsAction="never"
+        android:orderInCategory="1"/>
     <item android:id="@+id/Share" android:title="Share" android:icon="@mipmap/ic_action_share" app:showAsAction="always"/>
 </menu>
