--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/leh"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,14 +14,20 @@
         android:src="@android:drawable/sym_def_app_icon" android:id="@+id/imageView" />-->
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Greet"
+        android:text="@string/app_name"
         android:paddingLeft="4sp"
         android:paddingRight="4sp"
         android:paddingBottom="4sp"
         android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Make your day!!" android:id="@+id/textView" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="4sp"
+        android:paddingRight="4sp"
+        android:text="Make your day!!"
+        android:textColor="@android:color/background_light"/>
 
 </LinearLayout>
