--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="swipe_color_4">#7CAF00</color>
 
     <color name="toolbar">#DD4814</color>
-
+    <color name="story_text">#081F2C</color>
 
 </resources>
