--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -24,7 +24,7 @@
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/loading_story"
+                    android:text="@string/loading_places"
                     android:textColor="@android:color/background_dark"
                     android:textSize="16sp"/>
 
@@ -57,8 +57,8 @@
                     <com.android.volley.toolbox.NetworkImageView
                         android:id="@+id/PlaceImage"
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:scaleType="centerCrop"/>
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true" />
 
 
                 </RelativeLayout>
@@ -69,14 +69,16 @@
                     android:layout_marginTop="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textColor="@android:color/background_dark"/>
 
                 <TextView
                     android:id="@+id/PlaceDescription"
                     android:layout_margin="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textColor="@color/story_text"/>
 
             </LinearLayout>
 
@@ -97,7 +99,7 @@
             android:gravity="center"
             android:textColor="@android:color/background_dark"
             android:textSize="16sp"
-            android:text="@string/loading_story"/>
+            android:text="@string/loading_places"/>
 
     </LinearLayout>
 
