--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -57,8 +57,8 @@
                     <com.android.volley.toolbox.NetworkImageView
                         android:id="@+id/PlaceImage"
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:scaleType="centerCrop"/>
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"/>
 
 
                 </RelativeLayout>
@@ -69,6 +69,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/background_dark"
                     android:textSize="20sp" />
 
                 <TextView
@@ -76,7 +77,8 @@
                     android:layout_margin="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textColor="@color/story_text"/>
 
             </LinearLayout>
 
