--- a/app/src/main/res/layout/activity_full_place_info.xml
+++ b/app/src/main/res/layout/activity_full_place_info.xml
@@ -41,7 +41,8 @@
                         android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="@string/loading_story"
+                        android:text="@string/loading_places"
+                        android:padding="4dp"
                         android:textColor="@android:color/background_dark"
                         android:textSize="16sp"/>
 
