--- a/app/src/main/res/layout/activity_full_place_info.xml
+++ b/app/src/main/res/layout/activity_full_place_info.xml
@@ -56,7 +56,8 @@
             android:id="@+id/PlaceView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:background="@android:color/background_light">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -117,7 +118,7 @@
                 android:gravity="center"
                 android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
-                android:text="@string/loading_story"/>
+                android:text="@string/loading_places"/>
 
         </LinearLayout>
 
