--- a/app/src/main/res/layout/activity_full_story.xml
+++ b/app/src/main/res/layout/activity_full_story.xml
@@ -55,7 +55,8 @@
             android:id="@+id/PlaceView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:background="@android:color/background_light">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
