--- a/app/src/main/res/layout/fragment_facts.xml
+++ b/app/src/main/res/layout/fragment_facts.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sagycorp.greet.Fragments.Facts"
@@ -7,7 +8,33 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <ImageButton
+            android:id="@+id/previous"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@mipmap/ic_action_arrowleft"/>
+
+        <TextView
+            android:id="@+id/factNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity = "center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/background_light"
+            android:textSize="22sp"/>
+        <ImageButton
+            android:id="@+id/next"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/ic_action_arrowright"/>
+
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,7 +48,7 @@
 
             <TextView
                 android:id="@+id/DidYouKnow"
-                android:gravity="center"
+                android:gravity="fill_horizontal"
                 android:padding="4sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -33,4 +60,4 @@
     </ScrollView>
 
 
-</RelativeLayout>
+</LinearLayout>
