--- a/app/src/main/res/layout/fragment_places_archive.xml
+++ b/app/src/main/res/layout/fragment_places_archive.xml
@@ -12,7 +12,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/PlacesArchiveList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#ECEFF1"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -29,7 +30,7 @@
             android:gravity="center"
             android:textColor="@android:color/background_dark"
             android:textSize="16sp"
-            android:text="@string/loading_story_archive"/>
+            android:text="@string/loading_places_archive"/>
 
     </LinearLayout>
 
