--- a/app/src/main/res/layout/fragment_story_archive.xml
+++ b/app/src/main/res/layout/fragment_story_archive.xml
@@ -12,7 +12,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/StoryArchiveList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#ECEFF1" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
