--- a/app/src/main/res/layout/fragment_story_archive_row.xml
+++ b/app/src/main/res/layout/fragment_story_archive_row.xml
@@ -1,6 +1,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,7 +14,7 @@
             android:layout_height="70dp"
             android:padding="4dp"
             android:textColor="@android:color/background_light"
-            android:background="@color/archive_story_index"
+            android:background="@drawable/bg"
             android:textSize="26sp"/>
 
         <TextView
