--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
         <item android:id="@+id/nav_story" android:icon="@mipmap/people"
             android:title="@string/story" />
         <item android:id="@+id/nav_places" android:icon="@mipmap/places"
@@ -14,11 +16,13 @@
             android:title="@string/horoscope" />
     </group>
 
-    <item android:title="Advice">
-        <menu>
-            <item android:id="@+id/nav_shareStory" android:icon="@mipmap/story"
-                android:title="@string/inspire"/>
-        </menu>
-    </item>
+    <group
+        android:id="@+id/menu_bottom"
+        android:checkableBehavior="single">
+        <item android:id="@+id/nav_shareStory" android:icon="@mipmap/story"
+            android:title="@string/inspire"/>
+        <item android:id="@+id/nav_whyAds" android:icon="@mipmap/ads"
+            android:title="@string/whyAds"/>
+    </group>
 
 </menu>
