--- a/app/src/main/res/layout/fragment_facts.xml
+++ b/app/src/main/res/layout/fragment_facts.xml
@@ -50,7 +50,7 @@
 
             <TextView
                 android:id="@+id/DidYouKnow"
-                android:gravity="fill_horizontal"
+                android:gravity="center"
                 android:padding="4sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
