--- a/app/src/main/res/layout/fragment_horoscope.xml
+++ b/app/src/main/res/layout/fragment_horoscope.xml
@@ -67,7 +67,7 @@
 
             <TextView
                 android:id="@+id/signQuote"
-                android:gravity="fill_horizontal"
+                android:gravity="center"
                 android:padding="4sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
